--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "changelog": "CHANGELOG.md",
     "README.md": "README.md"
   },
+  "main": "./dist/gkd.json5",
   "scripts": {
     "postinstall": "simple-git-hooks",
     "format": "prettier --cache --write ./**/*.{js,cjs,mjs,ts,jsx,tsx,json}",
