feat(123云盘): WEB端版本-更新提示(#031)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "README.md": "README.md"
   },
   "main": "./dist/gkd.json5",
+  "unpkg": "./dist/gkd.json5",
   "scripts": {
     "postinstall": "simple-git-hooks",
     "format": "prettier --cache --write ./**/*.{js,cjs,mjs,ts,jsx,tsx,json}",
