--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
         2. 我确保使用的是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
         3. 检查这个问题是否属于 [本项目维护的规则](https://github.com/AIsouler/GKD_subscription) 导致的
         4. 如果你的issue被受理，受理者提出的问题、要求，应在3日内予以回复，否则会被关闭
-        
+
         #### 检查问题是否属于以下几种之一，如果属于请说明是哪一种（误触问题可忽略这条）
         1. 规则不生效，但是截取快照时生效/回到桌面（不杀后台）再进入软件后生效
         2. 规则触发了（有点击提示），但实际并不能生效（没有达到预期行为）
@@ -18,7 +18,7 @@ body:
     id: bug-1
     attributes:
       label: |
-        请输入 误触/出现问题 界面的快照或者生成的链接，也可在后面补充其它信息/问题说明
+        请提供 误触界面/出现问题界面 的快照，也可补充说明
       description: |
         快照是一个 zip 文件，快照链接是类似 "https://i.gkd.li/i/XXXXXXXX" 的文本，按照如下方式可获得快照信息
 
@@ -30,6 +30,6 @@ body:
     id: bug-2
     attributes:
       label: |
-        请说明是哪一条规则 误触/出现问题，可文字说明，也可提供触发记录界面的截图
+        请说明是哪一条规则 误触/出现问题（文字/触发记录界面截图）
     validations:
       required: true
