--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
     attributes:
       value: |
         ## 在提交问题之前，请您确保完成以下操作
-        1. 确保 **提供 误触/出现问题 界面的快照（不要提供截图，截图没有任何作用），并说明是哪一条规则 误触/出现问题**
+        1. ### 确保 **提供 误触/出现问题 界面的快照（不要提供截图，截图没有任何作用），并说明是哪一条规则 误触/出现问题**
         2. 确保使用的是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
         3. 检查这个问题是否属于 [本项目维护的规则](https://github.com/AIsouler/GKD_subscription) 导致的
         4. 如果你的issue被受理，受理者提出的问题、要求，应在3日内予以回复，否则会被关闭
@@ -18,7 +18,7 @@ body:
     id: bug-1
     attributes:
       label: |
-        请提供 误触界面/出现问题界面 的快照，也可补充说明
+        请提供 误触界面/出现问题界面 的快照（不要提供截图！！！），也可补充说明
       description: |
         快照是一个 zip 文件，快照链接是类似 "https://i.gkd.li/i/XXXXXXXX" 的文本，按照如下方式可获得快照信息
 
