--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,7 @@ body:
     attributes:
       value: |
         ## 在提交问题之前，请您确保完成以下操作
-        1. 确保 **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
+        1. ### 确保 **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
         2. 确保使用的是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
         3. 确保已阅读 [不予适配情况合集](https://github.com/AIsouler/GKD_subscription/issues/480)
         4. 如果你的issue被受理，受理者提出的问题、要求，应在3日内予以回复，否则会被关闭
@@ -14,7 +14,7 @@ body:
     id: feature-description
     attributes:
       label: |
-        请提供 需要适配界面 的快照，也可补充说明
+        请提供 需要适配界面 的快照（不要提供截图！！！），也可补充说明
       description: |
         快照是一个 zip 文件，快照链接是类似 "https://i.gkd.li/i/XXXXXXXX" 的文本，按照如下方式可获得快照信息
 
