chore: add auto build release
Signed-off-by: jiuqianyuan <39406781+jiuqianyuan@users.noreply.github.com>

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,6 +1,9 @@
 name: build_release
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '40 18 * * *' # 每天凌晨2点40分自动执行
 
 jobs:
   build_release:
