--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,10 @@ body:
     attributes:
       value: |
         ## 在提交问题之前，请您确保完成以下操作
-        1. ### 确保 **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
+        ## 在提交问题之前，请您确保完成以下操作
+        ## 在提交问题之前，请您确保完成以下操作
+
+        1. 确保 **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
         2. 检查全局规则是否开启
         3. 确保使用的是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
         4. 确保已阅读 [不予适配情况合集](https://github.com/AIsouler/GKD_subscription/issues/480)
