--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,14 +5,14 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 在提交问题之前，请您确保完成以下操作
-        ## 在提交问题之前，请您确保完成以下操作
-        ## 在提交问题之前，请您确保完成以下操作
+        ## 在提交问题之前，请您务必完成以下操作！！！
+        ## 在提交问题之前，请您务必完成以下操作！！！
+        ## 在提交问题之前，请您务必完成以下操作！！！
 
-        1. 确保 **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
+        1. **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
         2. 检查全局规则是否开启
-        3. 确保使用的是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
-        4. 确保已阅读 [不予适配情况合集](https://github.com/AIsouler/GKD_subscription/issues/480)
+        3. 检查使用的是否是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
+        4. 阅读 [不予适配情况合集](https://github.com/AIsouler/GKD_subscription/issues/480)
         5. 如果你的issue被受理，受理者提出的问题、要求，应在3日内予以回复，否则会被关闭
         6. 一个issue内可提供多个快照，没必要对同一个应用开启多个issue
   - type: textarea
