--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,11 +5,11 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 在提交问题之前，请您务必完成以下操作！！！
-        ## 在提交问题之前，请您务必完成以下操作！！！
-        ## 在提交问题之前，请您务必完成以下操作！！！
+        ## 在提交问题之前，请您务必完成以下操作，否则你的issue可能会根据情况直接被关闭！！！
+        ## 在提交问题之前，请您务必完成以下操作，否则你的issue可能会根据情况直接被关闭！！！
+        ## 在提交问题之前，请您务必完成以下操作，否则你的issue可能会根据情况直接被关闭！！！
 
-        1. **提供需要适配界面的快照（不要提供截图，截图没有任何作用）**
+        1. **提供需要适配界面的快照（不要提供截图，截图没有任何作用），快照获取方式如下图**
         2. 如果是需要点击多次才能关闭的情况，那么必须提供每一次点击页面的快照
         3. 检查全局规则是否开启
         4. 检查使用的是否是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
