--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,6 +14,7 @@ body:
         3. 检查使用的是否是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
         4. 检查这个问题是否属于 [本项目维护的规则](https://github.com/AIsouler/GKD_subscription) 导致的
         5. 如果你的issue被受理，受理者提出的问题、要求，应在3日内予以回复，否则会被关闭
+        6. 上传文件时请等待文件名前面的 Uploading 消失后再提交，否则文件将会上传失败
 
         #### 检查问题是否属于以下几种之一，如果属于请说明是哪一种（误触问题可忽略这条）
         1. 规则不生效，但是截取快照时生效/回到桌面（不杀后台）再进入软件后生效
