chore: issue template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,7 +9,7 @@ body:
         ## 在提交问题之前，请您务必完成以下操作，否则你的issue可能会根据情况直接被关闭！！！
         ## 在提交问题之前，请您务必完成以下操作，否则你的issue可能会根据情况直接被关闭！！！
 
-        1. **提供 误触/出现问题 界面的快照（不要提供截图，截图没有任何作用），并说明是哪一条规则 误触/出现问题，快照获取方式如下图**
+        1. **提供 误触/出现问题 界面的快照（不要提供截图，截图没有任何作用，不要使用截屏快照），并说明是哪一条规则 误触/出现问题，快照获取方式如下图**
         2. 如果是需要点击多次才能关闭的情况，那么必须提供每一次点击页面的快照
         3. 检查使用的是否是 [最新版订阅](https://github.com/AIsouler/GKD_subscription/releases/latest) 和 [最新版GKD](https://github.com/gkd-kit/gkd/releases/latest)
         4. 检查这个问题是否属于 [本项目维护的规则](https://github.com/AIsouler/GKD_subscription) 导致的
@@ -23,7 +23,7 @@ body:
     id: bug-1
     attributes:
       label: |
-        请提供 误触界面/出现问题界面 的快照（不要提供截图！！！），也可补充说明
+        请提供 误触界面/出现问题界面 的快照（不要提供截图！！！不要使用截屏快照！！！），也可补充说明
       description: |
         快照是一个 zip 文件，快照链接是类似 "https://i.gkd.li/i/XXXXXXXX" 的文本，按照如下方式可获得快照信息
 
